# vidvort

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
api/: pyproject.toml
vidvort_api/: main.py  pyproject.toml
