[tool.poetry]
name = "vidvort_api"
version = "0.1.0"
description = ""
authors = ["theharshpat <harsh.patel.magic105@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
